--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -3,14 +3,16 @@
     --color-primary-light:#FF3366;
     --color-primary-dark:#BA265D;
 
-    --color--grey-light-2:#f4f2f2;
-    --color--grey-light-1:#faf9f9;
-    --color--grey-light-3:#f0eeee;
-    --color--grey-light-4:#ccc;
+    --color-grey-light-2:#f4f2f2;
+    --color-grey-light-1:#faf9f9;
+    --color-grey-light-3:#f0eeee;
+    --color-grey-light-4:#ccc;
 
-    --color--grey-dark-1: #333;
-    --color--grey-dark-2: #777;
-    --color--grey-dark-3: #999;
+    --color-grey-dark-1: #333;
+    --color-grey-dark-2: #777;
+    --color-grey-dark-3: #999;
+
+    --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, .3);
 }
 
 *,
