--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -2,7 +2,7 @@
 // LOGO
 .logo {
     height: 3.25rem;
-    margin-left: 3rem;
+    margin-left: 2rem;
 }
 
 ///////////////////////////////
@@ -36,11 +36,11 @@
 
         &::-webkit-input-placeholder {
             font-weight: 100;
-            color:var(--color-grey-light-4)
+            color: var(--color-grey-light-4)
         }
     }
 
-    &__input:focus + &__button {
+    &__input:focus+&__button {
         background-color: var(--color-grey-light-3);
     }
 
@@ -48,11 +48,11 @@
         border: none;
         background-color: var(--color-grey-light-2);
 
-        &:focus{
+        &:focus {
             outline: none;
         }
 
-        &:active{
+        &:active {
             transform: translateY(2px);
         }
     }
@@ -68,24 +68,55 @@
 // USER NAVIGATION
 
 .user-nav {
-    background-color: greenyellow;
+    align-self: stretch;
+
+    display: flex;
+    align-items: center;
+
+    &>* {
+        padding: 0 2rem;
+        cursor: pointer;
+        height: 100%;
+        display: flex;
+        align-items: center;
+
+        &:hover {
+            background-color: var(--color-grey-light-2);
+        }
+    }
 
     &__icon {
         height: 2.25rem;
         width: 2.25rem;
+        fill: var(--color-grey-dark-2);
 
-        &-box {}
+        &-box {
+            position: relative;
+        }
     }
 
-    &__notification {}
+    &__notification {
+        font-size: .8rem;
+        height: 1.75rem;
+        width: 1.75rem;
+        border-radius: 50%;
+        background-color: var(--color-primary);
+        color: #fff;
+        position: absolute;
+        // inset is shorthand for top right bottom left -remember the order
+        // inset:1.5rem 1.1rem 1rem 1rem;
+        top: 1.5rem;
+        right: 1.1rem;
 
-    &__user {
+        display: flex;
+        justify-content: center; //center horizontally
+        align-items: center; //center vertically
+    }
 
-        &-photo {
-            height: 3.75rem;
-            border-radius: 50%;
-        }
 
-        &-name {}
+    &__user-photo {
+        height: 3.75rem;
+        border-radius: 50%;
+        margin-right: 1rem;
     }
 }
