--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -120,3 +120,78 @@
         margin-right: 1rem;
     }
 }
+
+///////////////////////////////
+// SIDE NAVIGATION
+
+.side-nav {
+    font-size: 1.4rem;
+    list-style: none;
+    margin-top: 3.5rem;
+
+    &__item {
+        position: relative;
+
+        &:not(:last-child) {
+            margin-bottom: .5rem;
+        }
+
+        &::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 100%;
+            width: .3rem;
+            background-color: var(--color-primary);
+            transform: scaleY(0);
+            transition: transform .3s,
+                         width .4s cubic-bezier(1,0,0,1) .2s,
+                         background-color .2s;
+        }
+    }
+
+    &__item:hover::before,
+    .active::before {
+        transform: scaleY(1);
+        width: 100%;
+    }
+
+    &__item:active::before{
+        background-color: var(--color-primary-light);
+    }
+
+    &__link,
+    &__link:visited {
+        color: var(--color-grey-light-1);
+        text-decoration: none;
+        text-transform: uppercase;
+        display: block;
+        padding: 1.5rem 3rem;
+        white-space: nowrap;
+        position: relative; // we need to specify position for the z-index
+        z-index: 1; // z-index only works if we have specified position
+
+        display: flex;
+        align-items: center;
+    }
+
+
+    &__icon {
+        width: 1.75rem;
+        height: 1.75rem;
+        margin-right: 2rem;
+        fill: currentColor; // currentColor equal to inherit
+
+    }
+}
+
+///////////////////////////////
+// LEGAL TEXT
+
+.legal {
+    font-size: 1.2rem;
+    text-align: center;
+    color: var(--color-grey-light-4);
+    padding: 2.5rem;
+}
