--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -26,10 +26,18 @@
     background-color: var(--color-grey-dark-1);
     // flex basis are initial main size
     flex: 0 0 18%; // this shorthand for flex-grow:0; flex-shrink:0; flex-basis:18%
+
+    display: flex;
+    flex-direction: column; //change main axis from horizontal to vertical
+    justify-content: space-between; // the items will justified vertically
 }
 
 .hotel-view {
-    // background-color: #fff;
+    background-color: #fff;
+    
+    // test
     background-color: orangered;
+    height: 80rem;
+
     flex: 1; // shorthand for flex-grow:1;
 }
