--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -146,8 +146,8 @@
             background-color: var(--color-primary);
             transform: scaleY(0);
             transition: transform .3s,
-                         width .4s cubic-bezier(1,0,0,1) .2s,
-                         background-color .2s;
+                width .4s cubic-bezier(1, 0, 0, 1) .2s,
+                background-color .2s;
         }
     }
 
@@ -157,7 +157,7 @@
         width: 100%;
     }
 
-    &__item:active::before{
+    &__item:active::before {
         background-color: var(--color-primary-light);
     }
 
@@ -194,4 +194,126 @@
     text-align: center;
     color: var(--color-grey-light-4);
     padding: 2.5rem;
+}
+
+///////////////////////////////
+// Gallery
+.gallery {
+    display: flex;
+
+    &__photo {
+        // this 100% are for all image
+        // so basiccaly, if the image only 2, the image will be 50% each
+        // if 3, its 3.333% repeating, so its distributed perfectly for each image
+        width: 100%;
+        display: block;
+    }
+}
+
+///////////////////////////////
+// Hotel Overview
+
+.overview {
+    display: flex;
+    // justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid var(--color-grey-light-2);
+
+
+    &__heading {
+        font-size: 2.25rem;
+        font-weight: 300;
+        text-transform: uppercase;
+        padding: 1.5rem 3rem;
+        letter-spacing: 1px;
+        // color: var(--color-grey-dark-3);
+    }
+
+    &__stars {
+        margin-right: auto;
+        display: flex;
+    }
+
+    &__icon-star,
+    &__icon-location {
+        width: 1.75rem;
+        height: 1.75rem;
+        fill: var(--color-primary);
+    }
+
+    &__location {
+        font-size: 1.2rem;
+        display: flex;
+        vertical-align: center;
+    }
+
+    &__icon-location {
+        margin-right: .5rem;
+    }
+
+    &__rating {
+        background-color: var(--color-primary);
+        color: #fff;
+        margin-left: 3rem;
+        padding: 0 2.25rem;
+        align-self: stretch; // occupy available space for the element
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        &-average {
+            font-size: 2.25rem;
+            font-weight: 300;
+            margin-bottom: -3px;
+        }
+
+        &-count {
+            font-size: .8rem;
+            text-transform: uppercase;
+        }
+    }
+
+}
+
+///////////////////////////////
+// Button Inline
+
+.btn-inline {
+    border: none;
+    color: var(--color-primary);
+    font-size: inherit;
+    border-bottom: 1px solid currentColor;
+    padding-bottom: 2px;
+    display: inline-block;
+    background-color: transparent;
+    cursor: pointer;
+    transition: all .2s;
+
+    // &:hover {
+    //     color: var(--color-grey-dark-1);
+    // }
+
+    &:focus {
+        outline: none;
+        animation: pulsate 1s infinite;
+    }
+}
+
+@keyframes pulsate {
+    0% {
+        transform: scale(1);
+        box-shadow: none;
+    }
+
+    50% {
+        transform: scale(1.05);
+        box-shadow: 0 1rem 4rem rgba(0, 0, 0, .25);
+    }
+
+    100% {
+        transform: scale(1);
+        box-shadow: none;
+    }
 }
