--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -217,7 +217,7 @@
     display: flex;
     // justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid var(--color-grey-light-2);
+    border-bottom: var(--line);
 
 
     &__heading {
@@ -315,5 +315,77 @@
     100% {
         transform: scale(1);
         box-shadow: none;
+    }
+}
+
+
+///////////////////////////////
+// Paragraph
+.paragraph:not(:last-of-type){
+    margin-bottom: 2rem;
+}
+///////////////////////////////
+// List
+.list{
+    list-style: none;
+    margin:3rem 0;
+    padding: 3rem;
+    border-top: var(--line);
+    border-bottom: var(--line);
+
+    display: flex;
+    flex-wrap: wrap;
+
+    &__item{
+        flex:0 0 50%;
+        margin-bottom: .7rem;
+    }
+
+    &__item::before{
+        content: "";
+        display: inline-block;
+        height: 2rem;
+        width: 2rem;
+        margin-right: .7rem;
+
+        // older browser
+        // background-image: url(../img/chevron-thin-right.svg);
+        // background-size: cover;
+
+        //Newer browser - masks
+        background-color: var(--color-primary);
+        -webkit-mask-image: url(../img/chevron-thin-right.svg);
+        -webkit-mask-size: cover;
+        mask-image: url(../img/chevron-thin-right.svg);
+        mask-size: cover;
+    }
+}
+
+///////////////////////////////
+// Recommend
+.recommend{
+    font-size: 1.3rem;
+    color: var(--color-grey-dark-3);
+
+    display: flex;
+    align-items: center;
+
+    &__count{
+        margin-right: auto;
+    }
+
+    &__friends{
+    }
+
+    &__photo{
+        box-sizing: content-box;
+        height: 4rem;
+        width: 4rem;
+        border-radius: 50%;
+        border: 3px solid #fff;;
+
+        &:not(:last-child){
+            margin-right: -1.5rem;
+        }
     }
 }
