--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -11,7 +11,7 @@
     font-size: 1.4rem;
     height: 7rem;
     background-color: #fff;
-    border-bottom: 1px solid var(--color-grey-light-2);
+    border-bottom: var(--line);
 
     display: flex;
     justify-content: space-between;
@@ -35,8 +35,26 @@
 .hotel-view {
     background-color: #fff;
     
-    // test
-    height: 80rem;
-
     flex: 1; // shorthand for flex-grow:1;
+}
+
+.detail{
+    display: flex;
+    padding: 4.5rem;
+    background-color: var(--color-grey-light-1);
+    border-bottom: var(--line);
+}
+
+.description{
+    font-size: 1.4rem;
+    background-color: #fff;
+    box-shadow: var(--shadow-light);
+    padding: 3rem;
+    flex: 0 0 60%; // flex grow 0, flex shrink 0, flex basis 60%;
+    margin-right: 4.5rem;
+}
+
+.user-reviews{
+    background-color: yellowgreen;
+    flex: 1;
 }
