--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -297,6 +297,7 @@
     }
 
     &:hover {
+
         // color: var(--color-grey-dark-1);
         span {
             margin-left: 8px;
@@ -461,4 +462,70 @@
         font-family: sans-serif;
         z-index: 1;
     }
+}
+
+///////////////////////////////
+// Call to action
+
+.cta {
+    padding: 3.5rem 0;
+    text-align: center;
+
+    &__book-now {
+        font-size: 2rem;
+        font-weight: 300;
+        text-transform: uppercase;
+        margin-bottom: 2.5rem;
+    }
+}
+
+.btn {
+    font-size: 1.5rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    border-radius: 100px;
+    border: none;
+    background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary-dark));
+    color: #fff;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+
+    &>* {
+        height: 100%;
+        width: 100%;
+        transition: all .2s;
+    }
+
+    &__visible {
+        display: inline-block;
+        padding: 2rem 7.5rem;
+    }
+
+    &__invisible {
+        display: inline-block;
+        position: absolute;
+        padding: 2rem 0rem;
+        left: 0;
+        top: -100%;
+
+    }
+
+    &:hover {
+        background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark));
+        animation: pulsate 1s infinite;
+    }
+
+    &:hover &__visible {
+        transform: translateY(100%);
+    }
+
+    &:hover &__invisible {
+        top: 0;
+    }
+
+    // &:focus{
+    //     outline: none;
+    //     animation: pulsate 1s infinite;
+    // }
 }
