--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -18,6 +18,12 @@
     --line: 1px solid var(--color-grey-light-2);
 }
 
+$bp-largest:75em; //1200px
+$bp-large:68.75em; //1100px
+$bp-medium:66.25em; //900px
+$bp-small:37.5em; //600px
+$bp-smallest:31.25em; //500px
+
 *,
 *::before,
 *::after {
@@ -29,6 +35,13 @@
 html{
     box-sizing: border-box;
     font-size: 62.5%; // 1rem = 10px
+
+    @media only screen and (max-width: $bp-large){
+        font-size: 50%;
+    }
+    @media only screen and (max-width: $bp-small){
+        font-size: 40%;
+    }
 }
 
 body {
