--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -14,6 +14,13 @@
     align-items: center;
     justify-content: center;
 
+    @media only screen and (max-width:$bp-smallest){
+        order:1;
+        flex: 0 0 100%;
+        background-color: var(--color-grey-light-2);
+    }
+
+
     &__input {
         // input element doesnt automatically inherit from parent/global element
         // so we should manually set to inherit
@@ -129,11 +136,24 @@
     list-style: none;
     margin-top: 3.5rem;
 
+    @media only screen and (max-width:$bp-medium) {
+        display: flex;
+        margin: 0;
+    }
+
     &__item {
         position: relative;
 
         &:not(:last-child) {
             margin-bottom: .5rem;
+
+            @media only screen and (max-width:$bp-medium) {
+                margin: 0;
+            }
+        }
+
+        @media only screen and (max-width:$bp-medium) {
+            flex: 1;
         }
 
         &::before {
@@ -174,6 +194,17 @@
 
         display: flex;
         align-items: center;
+
+        @media only screen and (max-width:$bp-medium) {
+            justify-content: center;
+            padding: 2rem;
+        }
+
+        @media only screen and (max-width:$bp-small) {
+            flex-direction: column;
+            padding: 1.5rem;
+        }
+
     }
 
 
@@ -182,6 +213,12 @@
         height: 1.75rem;
         margin-right: 2rem;
         fill: currentColor; // currentColor equal to inherit
+
+        @media only screen and (max-width:$bp-small) {
+            margin: 0;
+            width: 1.5rem;
+            height: 1.5rem;
+        }
 
     }
 }
@@ -194,6 +231,10 @@
     text-align: center;
     color: var(--color-grey-light-4);
     padding: 2.5rem;
+
+    @media only screen and (max-width:$bp-medium) {
+        display: none;
+    }
 }
 
 ///////////////////////////////
@@ -224,9 +265,13 @@
         font-size: 2.25rem;
         font-weight: 300;
         text-transform: uppercase;
-        padding: 1.5rem 3rem;
         letter-spacing: 1px;
-        // color: var(--color-grey-dark-3);
+        padding: 1.5rem 3rem;
+
+        @media only screen and (max-width:$bp-small) {
+            font-size: 1.8rem;
+            padding: 1.25rem 2rem;
+        }
     }
 
     &__stars {
@@ -245,6 +290,7 @@
         font-size: 1.2rem;
         display: flex;
         vertical-align: center;
+
     }
 
     &__icon-location {
@@ -263,15 +309,28 @@
         align-items: center;
         justify-content: center;
 
+        @media only screen and (max-width:$bp-small){
+            padding: 0 1.5rem;
+        }
+    
+
         &-average {
             font-size: 2.25rem;
             font-weight: 300;
             margin-bottom: -3px;
+
+            @media only screen and (max-width:$bp-small){
+                font-size: 1.8rem;
+            }        
         }
 
         &-count {
             font-size: .8rem;
             text-transform: uppercase;
+
+            @media only screen and (max-width:$bp-small){
+                font-size: .5rem;
+            }        
         }
     }
 
@@ -384,7 +443,9 @@
         margin-right: auto;
     }
 
-    &__friends {}
+    &__friends {
+        display: flex;
+    }
 
     &__photo {
         box-sizing: content-box;
@@ -392,10 +453,9 @@
         width: 4rem;
         border-radius: 50%;
         border: 3px solid #fff;
-        ;
 
         &:not(:last-child) {
-            margin-right: -1.5rem;
+            margin-right: -2rem;
         }
     }
 }
@@ -410,6 +470,11 @@
     margin-bottom: 3.5rem;
     position: relative;
     overflow: hidden;
+
+    @media only screen and (max-width:$bp-medium) {
+        padding: 2rem;
+        margin-bottom: 3rem;
+    }
 
     &__text {
         margin-bottom: 2rem;
@@ -471,6 +536,10 @@
     padding: 3.5rem 0;
     text-align: center;
 
+    @media only screen and (max-width:$bp-medium) {
+        padding: 2.5rem 0;
+    }
+
     &__book-now {
         font-size: 2rem;
         font-weight: 300;
@@ -524,8 +593,8 @@
         top: 0;
     }
 
-    // &:focus{
-    //     outline: none;
-    //     animation: pulsate 1s infinite;
-    // }
+    &:focus {
+        outline: none;
+        // animation: pulsate 1s infinite;
+    }
 }
