--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -14,8 +14,8 @@
     align-items: center;
     justify-content: center;
 
-    @media only screen and (max-width:$bp-smallest){
-        order:1;
+    @media only screen and (max-width:$bp-smallest) {
+        order: 1;
         flex: 0 0 100%;
         background-color: var(--color-grey-light-2);
     }
@@ -125,6 +125,76 @@
         height: 3.75rem;
         border-radius: 50%;
         margin-right: 1rem;
+    }
+
+    &__user {
+        position: relative;
+
+        &:hover {
+            .user-nav__user-dropdown {
+                display: flex;
+            }
+        }
+    }
+
+    &__user-dropdown {
+        position: absolute;
+        display: none;
+        flex-direction: column;
+        min-width: 15rem;
+        font-size: 1.6rem;
+        flex: 1;
+        // left: 0;
+        right: 0;
+        list-style: none;
+        top: 6.95rem;
+        // padding-left: 1rem;
+        z-index: 3;
+        // justify-content: space-between;
+        // align-items:center;
+        background-color: var(--color-grey-dark-1);
+    }
+
+    &__dropdown-list {
+        display: none;
+        // margin: 1rem 0;
+        display: flex;
+        align-items: center;
+        height: 5rem;
+        position: relative;
+        color: #fff;
+        // z-index: 4;
+
+        &::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 100%;
+            width: .3rem;
+            background-color: var(--color-primary);
+            transform: scaleY(0);
+            transition: transform .3s,
+                width .4s cubic-bezier(1, 0, 0, 1) .2s,
+                background-color .2s;
+            z-index: -1;
+        }
+
+        &:hover::before {
+            transform: scaleY(1);
+            width: 100%;
+        }
+
+        &:last-child {
+            border-top: 1px solid currentColor;
+        }
+    }
+
+    &__dropdown-icon {
+        margin: 1.5rem;
+        height: 2rem;
+        width: 2rem;
+        fill: currentColor;
     }
 }
 
@@ -309,28 +379,28 @@
         align-items: center;
         justify-content: center;
 
-        @media only screen and (max-width:$bp-small){
+        @media only screen and (max-width:$bp-small) {
             padding: 0 1.5rem;
         }
-    
+
 
         &-average {
             font-size: 2.25rem;
             font-weight: 300;
             margin-bottom: -3px;
 
-            @media only screen and (max-width:$bp-small){
+            @media only screen and (max-width:$bp-small) {
                 font-size: 1.8rem;
-            }        
+            }
         }
 
         &-count {
             font-size: .8rem;
             text-transform: uppercase;
 
-            @media only screen and (max-width:$bp-small){
+            @media only screen and (max-width:$bp-small) {
                 font-size: .5rem;
-            }        
+            }
         }
     }
 
@@ -418,15 +488,18 @@
         margin-right: .7rem;
 
         // older browser
-        // background-image: url(../img/chevron-thin-right.svg);
-        // background-size: cover;
+        background-image: url(../img/chevron-thin-right.svg);
+        background-size: cover;
 
         //Newer browser - masks
-        background-color: var(--color-primary);
-        -webkit-mask-image: url(../img/chevron-thin-right.svg);
-        -webkit-mask-size: cover;
-        mask-image: url(../img/chevron-thin-right.svg);
-        mask-size: cover;
+        @supports(-webkit-mask-image:url()) or (mask-image:url()) {
+            background-color: var(--color-primary);
+            -webkit-mask-image: url(../img/chevron-thin-right.svg);
+            -webkit-mask-size: cover;
+            mask-image: url(../img/chevron-thin-right.svg);
+            mask-size: cover;
+            background-image: none;
+        }
     }
 }
 
